# Instructor

./: .eslintrc.js  xd
backend/: .gitignore  CMakeLists.txt  index.html  main.cpp  test.json
backend/controllers/: AuthController.cc  AuthController.h  EstudianteController.cc  EstudianteController.h  ProfesorController.cc  ProfesorController.h  UsuarioController.cc  UsuarioController.h  tests.txt
backend/filters/: CorsFilter.h  CorsFilter.txt
backend/services/: AuthService.cpp  AuthService.hpp  ClaseService.cpp  ClaseService.hpp  CursoService.cpp  CursoService.hpp  InscripcionService.cpp  UsuarioService.cpp  UsuarioService.hpp
backend/src/: Clase.cpp  Clase.hpp  Curso.cpp  Curso.hpp  Estudiante.cpp  Estudiante.hpp  FileDatabase.cpp  Profesor.cpp  Profesor.hpp  Usuario.cpp  Usuario.hpp  Utils.cpp
backend/test/: CMakeLists.txt  tests.txt
backend/utils/: FileDatabase.hpp  JWT.h  Utils.hpp
frontend/: package-lock.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/pages/: Login.js  Register.js  StudentDashboard.js  TeacherDashboard.js
frontend/src/services/: api.js
